k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bayandigital
  labels:
    app.kubernetes.io/name: bayandigital
